force-app/main/default/objects/Document__c/Document__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the document details of product and asset.</description>
    <label>Document</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>