force-app/main/default/objects/Document__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>This field is used to store the document category based on the type selected.</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instruction Manuals</fullName>
            </value>
            <value>
                <fullName>Technical Information</fullName>
            </value>
            <value>
                <fullName>Certificates</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>General Specifications</fullName>
            </value>
            <value>
                <fullName>Drawings</fullName>
            </value>
            <value>
                <fullName>FAQs</fullName>
            </value>
            <value>
                <fullName>Training Modules</fullName>
            </value>
            <value>
                <fullName>Specifications and Functions</fullName>
            </value>
            <value>
                <fullName>BOM</fullName>
            </value>
            <value>
                <fullName>Lifecycle Report</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Technical InformationLink</fullName>
            </value>
            <value>
                <fullName>Brochures</fullName>
                <isActive>false</isActive>
                <label>Brochures</label>
            </value>
            <value>
                <fullName>FAQ</fullName>
                <isActive>false</isActive>
                <label>FAQ</label>
            </value>
            <value>
                <fullName>Installation Guide</fullName>
                <isActive>false</isActive>
                <label>Installation Guide</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>