force-app/main/default/objects/Document__c/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <description>This field is for storing the document name responded from document API call.</description>
    <label>Document Name</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>