force-app/main/default/objects/Document__c/fields/File_Extension__c.field-meta.xml
<CustomField>
    <fullName>File_Extension__c</fullName>
    <description>This field is used to store the file extension.</description>
    <label>File Extension</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>