force-app/main/default/objects/Document__c/fields/File_Size__c.field-meta.xml
<CustomField>
    <fullName>File_Size__c</fullName>
    <description>This field is used to store the file size of the document.</description>
    <label>File Size</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>