force-app/main/default/objects/Document__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>This field stores the document link.</description>
    <label>Link</label>
    <type>Url</type>
</CustomField>