force-app/main/default/objects/Document__c/fields/MS_Code__c.field-meta.xml
<CustomField>
    <fullName>MS_Code__c</fullName>
    <description>This field is to store the MS Code return from document API call.</description>
    <label>MS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>