force-app/main/default/objects/Document__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field lookup with product table for Model Code.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Document</relationshipLabel>
    <relationshipName>Document</relationshipName>
    <type>Lookup</type>
</CustomField>