force-app/main/default/objects/Document__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to loopup with project object.</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Document</relationshipLabel>
    <relationshipName>Document</relationshipName>
    <type>Lookup</type>
</CustomField>