force-app/main/default/objects/Document__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup object to asset serial number field.</description>
    <inlineHelpText>Please dont use this field for Build 1(This is for the future reference)</inlineHelpText>
    <label>Serial Number</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Document (Serial Number)</relationshipLabel>
    <relationshipName>Document1</relationshipName>
    <type>Lookup</type>
</CustomField>