force-app/main/default/objects/Document__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This fields defines the attachments belong to document or resource type.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Resources</fullName>
            </value>
            <value>
                <fullName>SysReport</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>